# shell-scripts

./: .gitignore  .gitmodules  .tomohara-aliases.bash.swp  Dockerfile  README.md  README.txt  TODO.txt  WORKFLOWS.md  _set-hostnickname.sh  _temp-user-docker.env  acl.sh  add_frequencies.perl  adhoc-backup-dir.bash  all-tomohara-aliases-etc.bash  all_script_alias.sh  alt-extract-all-git-versions.bash  alt-randomize-lines.perl  anaconda-aliases.bash  analyze-relation-searches.perl  ascii2network.perl  auto_pager.bash  backup-aliases.sh  backup_dir.py  bad-telnet.perl  bash2python.py  bash2python_diff.py  bash2python_experimental.py  bash2python_test.py  batch-nvidia-smi.sh  batspp-report.py  batspp.py  belief_network.perl  bibitem2bib.perl  bookmark2ascii.perl  build-pattern.sh  calc_entropy.perl  calc_entropy.py  check_errors.perl  check_errors.py  cmd.sh  (+193 more)
Mezcla/: .coveragerc  .gitignore  Dockerfile  README.txt  TODO.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
Mezcla/mezcla/: TODO.md  __init__.py  __main__.py  analyze_tfidf.py  audio.py  bash_ast.py  bert_multi_classification.py  bert_text_classification.py  bing_search.py  check_html_javascript.py  compute_tfidf.py  convert_emoticons.py  cut.py  data_utils.py  debug.py  extract_document_text.py  file_utils.py  filter_random.py  format_profile.py  gensim_test.py  glue_helpers.py  html_utils.py  kenlm_example.py  keras_param_search.py  main.py  merge_files.py  merge_notes.py  misc_utils.py  my_regex.py  ngram_tfidf.py  os_utils.py  pandas_sklearn.py  plot_utils.py  python_ast.py  randomize_lines.py  (+19 more)
(+4233 files in other folders)
